src/domain/hanke/portfolio/HankePortfolio.module.scss
@import 'layout.scss';

.hankesalkkuContainer {
  .contentContainer {
    max-width: var(--breakpoint-xl);
    margin: auto;
    padding: var(--spacing-l) var(--spacing-l) var(--spacing-3-xl) var(--spacing-l);
    overflow-x: hidden;

    .notFoundContainer {
      display: flex;
      flex-direction: column;
      align-items: center;
      margin-top: var(--spacing-3-xl);
      text-align: center;
    }

    .hankeCard {
      padding: var(--spacing-s);
      margin-top: var(--spacing-xs);
      align-items: center;
    }

    .hankeCardHeader {
      &:hover {
        cursor: pointer;
      }

      .link {
        color: var(--color-coat-of-arms);
      }

      .hankeName {
        flex-grow: 1;
        display: flex;
        gap: var(--spacing-s);
        align-items: center;
        flex-wrap: wrap;
      }

      .hankeDates {
        display: flex;
        flex-direction: row;

        p {
          margin: 0 5px;
        }
      }

      .actions {
        display: flex;
        gap: var(--spacing-xs);
      }

      .iconWrapper {
        flex-grow: 0;
      }
    }

    .notification {
      margin-top: var(--spacing-s);
    }

    .hankeCardFlexContainer {
      display: flex;
      flex-direction: row;
      gap: var(--spacing-s);
      justify-content: space-between;
      align-items: center;
      flex: 1 1 auto;
    }

    .flexWrap {
      flex-wrap: wrap;
    }

    .hankeCardContent {
      margin-top: var(--spacing-l);
      display: grid;
      grid-template-columns: 1fr;
      gap: var(--spacing-xs);

      @include respond-above(l) {
        grid-template-columns: 5fr 4fr;
      }

      .showHankeButton {
        margin-right: var(--spacing-xs);
      }
    }

    .pagination {
      margin-top: var(--spacing-m);

      * {
        box-sizing: content-box;
      }
    }
  }

  .gridBasicInfo {
    display: grid;
    grid-template-columns: 1fr;
    margin-bottom: var(--spacing-s);

    @include respond-above(s) {
      grid-template-columns: 1fr 2fr;
    }

    .infoHeader {
      color: var(--color-black-90);
    }

    .infoContent {
      color: var(--color-black-70);
    }

    .linkWrapper {
      display: flex;
      height: min-content;
      align-items: flex-start;

      .link {
        padding-left: var(--spacing-xs);
        color: var(--color-coat-of-arms);
      }
    }
  }

  .index {
    display: flex;

    .indexBox {
      padding: 2px var(--spacing-3-xs) 0;
      margin-right: var(--spacing-s);
      background-color: #c4123e;
      color: white;
      line-height: 22px;
    }
  }

  .gridContactInfo {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: repeat(6, min-content);
    padding: var(--spacing-s) var(--spacing-s) 0;
    row-gap: var(--spacing-xs);

    &:not(:last-child) {
      border-bottom: 1px solid var(--color-black-10);
    }
  }

  .hankeTag {
    margin-right: var(--spacing-xs);
  }

  .headerContainer {
    background-color: var(--color-summer-light);
    padding: var(--spacing-s) var(--spacing-xl) 0 var(--spacing-3-xl);

    .filters {
      display: grid;
      grid-template-columns: 1fr;
      column-gap: var(--spacing-xl);
      row-gap: var(--spacing-s);
      max-width: var(--breakpoint-l);

      @include respond-above(m) {
        grid-template-columns: 1fr 1fr;
      }

      .dateRange {
        display: flex;
      }

      .clearBtn {
        margin-top: 28px;
        height: min-content;
      }

      .dateRangeHelperText {
        color: #666;
        display: block;
        line-height: var(--lineheight-l);
        font-size: var(--fontsize-body-m);
        margin-top: var(--spacing-3-xs);
        white-space: pre-line;
      }
    }

    .clearFiltersButton {
      width: fit-content;
      text-decoration: underline;
      padding-top: var(--spacing-m);
      padding-bottom: var(--spacing-m);

      &__hidden {
        visibility: hidden;
      }
    }
  }

  .mapHeader {
    display: flex;
    justify-content: space-between;
    margin-bottom: var(--spacing-xs);

    &__inner {
      display: flex;
      gap: var(--spacing-3-xs);
    }

    &__link {
      text-decoration: underline;
      margin-right: var(--spacing-3-xs);
    }
  }
}

